Skedulo/SkeduloTest/force-app/main/default/objects/Apex_Log__c/Apex_Log__c.object-meta.xml
<CustomObject>
    <label>Apex Log</label>
    <nameField>
        <displayFormat>LOG-{00000000}</displayFormat>
        <label>Log No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>