Skedulo/SkeduloTest/force-app/main/default/objects/Apex_Log__c/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <label>Current User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>