Skedulo/SkeduloTest/force-app/main/default/objects/Apex_Log__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <label>Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>